--- a/.gitignore
+++ b/.gitignore
@@ -1,82 +1,14 @@
-#Touch Working files
-###################
-*.*.toe
-CrashAutoSave.toe
-TouchDesignerCrash*.dmp
+# dependencies
+dev/dep/*
+release/dep/*
 
-# log files #
-###################
-data/logs/
+# the git-pip python bits
+dev/dep/python/get-pip.py
+release/dep/python/get-pip.py
+get-pip.py
 
-# vs code files #
-###################
-.vs/
+# the external TD tools
+dev/td-modules/tools/releaseVersions/*
 
-# python dependancy bits #
-###################
-dep/python/
-
-
-# Compiled source #
-###################
-*.com
-*.class
-*.o
-*.so
-
-# Outputfiles #
-###################
-output/*.jpg
-output/*.png
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-pids
-results
-
-### Node ###
-lib-cov
-*.seed
-*.log
-*.csv
-#*.dat
-*.out
-*.pid
-*.gz
-
-pids
-results
-
-npm-debug.log
-node_modules
-reference
-
-# emacs
-\#*
+# mac files
+*.DS_STORE
